[package]
name = "ibcx-test-utils"
version = "0.1.4"
authors = ["ByeongSu Hong <hong@byeongsu.dev>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/many-things/ibcx-test-utils"
description = "Test utils for ibcx"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
osmosis-std = "0.22.0"
osmosis-test-tube = "22.0.0"
cosmwasm-std = { version = "1.5.2", features = ["stargate"] }

rand = "0.8.5"

serde_json = "1.0.111"
bech32 = "0.9.1"

anyhow = "1.0.79"
rstest = "0.18.2"
